test/expected/declare_bi129.out
declare x as _BitInt(129)
        ^
9: error: _BitInt can be at most 128 bits
